--- a/frontTRS/public/index.html
+++ b/frontTRS/public/index.html
@@ -7,26 +7,8 @@
     <title>TREYESpassing</title>
     <link rel="stylesheet" href="stylesheet/bootstrap.min.css" type="text/css"/>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
-        function requester(){
-            axios({
-                method: 'get',
-                url: 'http://localhost:8000/api_getto/',
-                responseType: 'json',
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            })
-            .then(response => {
-                console.log(response.data.detected)
-            })
-            .catch(ex => {
-                alert('Failed to process video, please upload another one');
-            })
-        }
-    </script>
 </head>
-<body class="body" onload="requester();" style="background-color:#f6f6f6">
+<body class="body" style="background-color:#f6f6f6">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">TREYESpassing</a>    
     </nav>
@@ -45,7 +27,6 @@
                 <img class="embed-responsive-item" src="https://i2-prod.mirror.co.uk/incoming/article225241.ece/ALTERNATES/s1200b/cctv-pic-carl-fox-762819831.jpg">
             </div>
         </div> -->
-    
     </div>
     <script src="public/script/jquery-3.4.1.min.js"></script>
     <script src="script/index.js"></script>
